Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11599

printing negative time on logs for recovery progress

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • None
    • None
    • master (2.11.56_30_g1c91721)
    • 3
    • 9223372036854775807

      at Lustre recovery, it prints negative time which is wrong.

      [  136.781490] LNetError: 11662:0:(peer.c:2468:lnet_peer_merge_data()) Error adding NID 10.2.15.157@o2ib10 to peer 10.0.15.157@o2ib10: -76
      [  136.804648] Lustre: scratch1-MDT0000: Denying connection for new client 84b44329-5504-df3d-ea2d-a1292d86d45a(at 10.0.15.157@o2ib10), waiting for 33 known clients (32 recovered, 0 in progress, and 0 evicted) to recover in -1:-11
      [  161.801563] Lustre: scratch1-MDT0000: Denying connection for new client 84b44329-5504-df3d-ea2d-a1292d86d45a(at 10.0.15.157@o2ib10), waiting for 33 known clients (32 recovered, 0 in progress, and 0 evicted) to recover in -1:-36
      [  186.798500] Lustre: scratch1-MDT0000: Denying connection for new client 84b44329-5504-df3d-ea2d-a1292d86d45a(at 10.0.15.157@o2ib10), waiting for 33 known clients (32 recovered, 0 in progress, and 0 evicted) to recover in -2:-01
      [  211.795081] Lustre: scratch1-MDT0000: Denying connection for new client 84b44329-5504-df3d-ea2d-a1292d86d45a(at 10.0.15.157@o2ib10), waiting for 33 known clients (32 recovered, 0 in progress, and 0 evicted) to recover in -2:-26 

            qian_wc Qian Yingjin
            sihara Shuichi Ihara
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: