LU-11599 ldlm: printing negative time on logs for recovery

At Lustre recovery, it prints a negative time which is wrong.
"Denying connection for new client ..., waiting for 33 known
clients (32 recovered, 0 in progress, and 0 evicted) to recover
in -1:-11"
This patch adds a judgement whether the recovery deadline has
already passed.

Signed-off-by: Qian Yingjin <qian@ddn.com>
Change-Id: Id832d8dbad694d241cc08156179afedf86c8aac2
Reviewed-on: https://review.whamcloud.com/33554
Tested-by: Jenkins
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>